Java/Udacity Java Intro/lesson2/newCrate2/doc/logfile.txt
Project documentation
<---- javadoc command: ---->
C:\Program Files (x86)\Java\jdk1.7.0_21\bin\javadoc.exe
-sourcepath
D:\Dropbox\code\Java\Udacity Java Intro\lesson2\newCrate2
-source
1.7
-classpath
C:\Program Files (x86)\BlueJ\lib\bluejcore.jar;C:\Program Files (x86)\BlueJ\lib\junit-4.8.2.jar;D:\Dropbox\code\Java\Udacity Java Intro\lesson2\newCrate2
-d
D:\Dropbox\code\Java\Udacity Java Intro\lesson2\newCrate2\doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
C:\Program Files (x86)\BlueJ\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
-doctitle
newCrate2
-windowtitle
newCrate2
-author
-version
-nodeprecated
-package
-link
http://download.oracle.com/javase/6/docs/api/
D:\Dropbox\code\Java\Udacity Java Intro\lesson2\newCrate2/Shape.java
D:\Dropbox\code\Java\Udacity Java Intro\lesson2\newCrate2/TopSecret.java
D:\Dropbox\code\Java\Udacity Java Intro\lesson2\newCrate2/Canvas.java
D:\Dropbox\code\Java\Udacity Java Intro\lesson2\newCrate2/Rectangle.java
D:\Dropbox\code\Java\Udacity Java Intro\lesson2\newCrate2/Line.java
D:\Dropbox\code\Java\Udacity Java Intro\lesson2\newCrate2/Color.java
<---- end of javadoc command ---->
Loading source file D:\Dropbox\code\Java\Udacity Java Intro\lesson2\newCrate2/Shape.java...
Loading source file D:\Dropbox\code\Java\Udacity Java Intro\lesson2\newCrate2/TopSecret.java...
D:\Dropbox\code\Java\Udacity Java Intro\lesson2\newCrate2\TopSecret.java:21: error: ')' expected
        Text secret = new Text(20, 30, "TOP SECRET"
                                                   ^
D:\Dropbox\code\Java\Udacity Java Intro\lesson2\newCrate2\TopSecret.java:24: error: reached end of file while parsing
}
 ^
Loading source file D:\Dropbox\code\Java\Udacity Java Intro\lesson2\newCrate2/Canvas.java...
Loading source file D:\Dropbox\code\Java\Udacity Java Intro\lesson2\newCrate2/Rectangle.java...
Loading source file D:\Dropbox\code\Java\Udacity Java Intro\lesson2\newCrate2/Line.java...
Loading source file D:\Dropbox\code\Java\Udacity Java Intro\lesson2\newCrate2/Color.java...
2 errors
